# filament

./: ARCHITECTURE.md  Cargo.toml  README.md  README.old.md
.cursor/rules/: paxos.mdc  universal-sync.mdc
filament-core/: Cargo.toml
filament-core/src/: codec.rs  error.rs  extension.rs  lib.rs  proposal.rs  protocol.rs
filament-editor/: Cargo.toml  tauri.conf.json
filament-editor/src/: actor.rs  document.rs  lib.rs  main.rs
filament-editor/src/tests/: actors.rs
filament-editor/tests/: actors.rs
filament-spool/: Cargo.toml
filament-spool/src/: acceptor.rs  learner.rs  metrics.rs  registry.rs  server.rs  state_store.rs
filament-testing/src/: lib.rs  repl.rs
filament-testing/tests/: integration.rs
filament-warp/src/: lib.rs
filament-weave/src/: client.rs  connector.rs  group_state.rs  learner.rs  lib.rs
paxos/: Cargo.toml
paxos/src/: acceptor.rs  config.rs  connection.rs  learner.rs  lib.rs  messages.rs  proposer.rs  traits.rs
paxos/src/core/: mod.rs  (+5 more)
paxos/tests/: integration.rs  stateright_tests.rs  turmoil_persistence_tests.rs  turmoil_tests.rs
plan/: ACCEPTOR-PROMISE-RACE.md  BACKOFF-AND-CONTENTION.md  COMMIT-CATCHUP.md  COMPACTION-LEADER-ELECTION.md  DESIGN-REVIEW.md  EXTERNAL-COMMIT-JOIN.md  KEY-ROTATION.md  REMOVED-MEMBER-EDITS.md
sync/: Cargo.toml
sync-acceptor/: Cargo.toml
sync-acceptor/src/: acceptor.rs  connector.rs  learner.rs  lib.rs  main.rs  registry.rs  server.rs  state_store.rs
sync-core/: Cargo.toml
sync-core/src/: codec.rs  crdt.rs  error.rs  extension.rs  handshake.rs  lib.rs  message.rs  proposal.rs  protocol.rs  sink_stream.rs  util.rs  welcome.rs
sync-editor/: Cargo.toml  TODO.md  build.rs  tauri.conf.json
sync-editor/capabilities/: default.json
sync-editor/src/: actor.rs  commands.rs  document.rs  editor_client.rs  lib.rs  main.rs  tauri_app.rs  types.rs
sync-editor/tests/: actors.rs  sync_test.rs
sync-editor/ui/: app.js  index.html
sync-editor/ui/styles/: main.css
sync-proposer/: Cargo.toml
sync-proposer/src/: client.rs  connection.rs  connector.rs  error.rs  flows.rs  group.rs  group_state.rs  learner.rs  lib.rs  main.rs  rendezvous.rs  repl.rs
sync-proposer/src/group/: acceptor_actor.rs  group_actor.rs  mod.rs
sync-testing/: Cargo.toml
sync-testing/src/: lib.rs  yrs_crdt.rs
sync-testing/tests/: integration.rs  yrs_v2_bug.rs
sync/src/: acceptor.rs  connector.rs  extension.rs  flows.rs  handshake.rs  learner.rs  lib.rs  message.rs  proposal.rs  registry.rs  server.rs  state_store.rs  testing.rs
sync/tests/: integration.rs
(+17 files in other folders)
