[package]
name = "sync-editor"
version = "0.1.0"
edition = "2024"
default-run = "sync-editor"

[lib]
name = "sync_editor"
path = "src/lib.rs"

[[bin]]
name = "sync-editor"
path = "src/main.rs"

[dependencies]
universal-sync-core = { path = "../sync-core" }
universal-sync-proposer = { path = "../sync-proposer" }
universal-sync-testing = { path = "../sync-testing" }
tauri = { version = "2", features = [] }
tokio.workspace = true
serde.workspace = true
serde_json = "1"
iroh.workspace = true
mls-rs = { workspace = true }
mls-rs-crypto-rustcrypto.workspace = true
yrs.workspace = true
bs58.workspace = true
postcard.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rand.workspace = true

[dev-dependencies]
universal-sync-acceptor = { path = "../sync-acceptor" }
tempfile.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }
