[package]
name = "universal-sync-proposer"
version = "0.1.0"
edition = "2024"

[dependencies]
universal-sync-core = { path = "../sync-core" }
universal-sync-paxos = { path = "../paxos" }
mls-rs = { version = "0.43", default-features = false }
mls-rs-crypto-rustcrypto = { version = "0.13", default-features = false }
serde.workspace = true
postcard.workspace = true
tokio.workspace = true
futures.workspace = true
tracing.workspace = true
tokio-util.workspace = true
iroh.workspace = true
bytes.workspace = true
pin-project-lite.workspace = true
