[package]
name = "universal-sync-proposer"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "proposer"
path = "src/main.rs"

[dependencies]
universal-sync-core = { path = "../sync-core" }
universal-sync-paxos = { path = "../paxos" }
mls-rs = { workspace = true, features = ["prior_epoch", "private_message"] }
mls-rs-core.workspace = true
mls-rs-crypto-rustcrypto.workspace = true
serde.workspace = true
postcard.workspace = true
tokio.workspace = true
futures.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-util.workspace = true
iroh.workspace = true
bytes.workspace = true
pin-project-lite.workspace = true
clap = { version = "4", features = ["derive"] }
rustyline = "15"
bs58.workspace = true
fjall.workspace = true
rand.workspace = true
error-stack.workspace = true
async-stream.workspace = true
xxhash-rust.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile = "3"
